--- a/P006992.opf/layers/v001/Pagination.yml
+++ b/P006992.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: bbc5d12a3b6a4ff183ee65af8ebc20db
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   04dd14bf225e4b8ab7b9412327544d86:
