--- a/P006992.opf/meta.yml
+++ b/P006992.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P006992
 initial_creation_type: ocr
+created_at: 29/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W00KG09761
   title: བྱ་རུང་ཁ་ཤོར་གྱི་ལོ་རྒྱུས
@@ -11,10 +13,3 @@ source_metadata:
       volume_number: 1
       total_pages: 142
       base_file: v001.txt
-ebook_metadata:
-  title: བྱ་རུང་ཁ་ཤོར་གྱི་ལོ་རྒྱུས
-  author: ''
-  sku: P006992
-  cover: cover.jpg
-  layers:
-  - pagination
