--- a/P006992.opf/meta.yml
+++ b/P006992.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P006992
 initial_creation_type: ocr
 created_at: 29/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:34:49.132336
 source_metadata:
   id: bdr:W00KG09761
   title: བྱ་རུང་ཁ་ཤོར་གྱི་ལོ་རྒྱུས
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 142
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
